--- a/webservices/admin/index.html
+++ b/webservices/admin/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Balsamiq+Sans">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/master.css">
-    <script src="main.js"></script>
+    <script src="./script/main.js"></script>
     <title>Traductor Gnäbere - Administración</title>
 </head>
 <body>
