Validacion de input
accept jpg y mp3

--- a/webservices/admin/index.html
+++ b/webservices/admin/index.html
@@ -106,7 +106,7 @@
     Audio
   </div>
   <div class="col-md-4  grupo-rojo">
-      <input id="audio" name="audio" class="input-file" type="file">
+      <input id="audio" name="audio" class="input-file" type="file" accept=".mp3">
   </div>
   <div class="col-md-2"></div>
 </div>
@@ -117,7 +117,7 @@
     Imagen
   </div>
   <div class="col-md-4  grupo-rojo">
-      <input id="imagen" name="imagen" class="input-file" type="file">
+      <input id="imagen" name="imagen" class="input-file" type="file" accept=".jpg">
   </div>
   <div class="col-md-2"></div>
 </div>
