--- a/webservices/admin/index.html
+++ b/webservices/admin/index.html
@@ -127,7 +127,11 @@
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
-    <input id="btnEnviar" class="btn  btn-lg btn-block btn-rojo" type="button" value="Enviar">
+    <input 
+      id="btnEnviar" 
+      class="btn  btn-lg btn-block btn-rojo" 
+      type="button"       
+      value="Enviar">
   </div>
   <div class="col-md-4"></div>
 </div>
