--- a/webservices/admin/index.html
+++ b/webservices/admin/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-<form class="form-horizontal">
+<form class="form-horizontal" id="frmTermino">
 <fieldset>
   <div class="row">
     <div class="col-md-12 fondo-ladrillo">
